@@ -1,7 +1,4 @@
 @comment $NetBSD$
-share/examples/SOGo/SOGo.conf
-share/examples/rc.d/sogod
-lib/GNUstep/Frameworks/SOGo.framework
 include/GDLContentStore/EOAdaptorChannel+GCS.h
 include/GDLContentStore/GCSAlarmsFolder.h
 include/GDLContentStore/GCSChannelManager.h
@@ -54,6 +51,64 @@ include/SOGo
 include/SOGoUI/SOGoAptFormatter.h
 include/SOGoUI/UIxComponent.h
 include/SOGoUI/UIxJSClose.h
+lib/GNUstep/Frameworks/SOGo.framework/Headers
+lib/GNUstep/Frameworks/SOGo.framework/Resources
+lib/GNUstep/Frameworks/SOGo.framework/SOGo
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/DOMNode+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/LDAPSource.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSArray+DAV.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSArray+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSCalendarDate+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSDictionary+DAV.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSDictionary+URL.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSDictionary+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSNull+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSNumber+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSObject+DAV.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSObject+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSString+DAV.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSString+Utilities.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/NSURL+DAV.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoAuthenticator.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoBuild.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoCASSession.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoCache.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoConstants.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoContentObject.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoDAVAuthenticator.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoDateFormatter.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoFolder.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoGCSFolder.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoGroup.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoMailer.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoObject.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoParentFolder.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoPermissions.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoProductLoader.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoProxyAuthenticator.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoSession.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoSieveManager.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoStartupLogger.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoUser.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoUserFolder.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoUserManager.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoUserProfile.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoWebAuthenticator.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoWebDAVAclManager.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SOGoWebDAVValue.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/SQLSource.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/WOContext+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/WORequest+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/WOResourceManager+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Headers/WOResponse+SOGo.h
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Resources/DAVReportMap.plist
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Resources/Info-gnustep.plist
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/Resources/SOGoDefaults.plist
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/SOGo
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/libSOGo.so
+lib/GNUstep/Frameworks/SOGo.framework/Versions/2/libSOGo.so.2.0.0
+lib/GNUstep/Frameworks/SOGo.framework/Versions/Current
+lib/GNUstep/Frameworks/SOGo.framework/libSOGo.so
 lib/GNUstep/Libraries/Resources/NGCards/TimeZones/Africa/Abidjan.ics
 lib/GNUstep/Libraries/Resources/NGCards/TimeZones/Africa/Accra.ics
 lib/GNUstep/Libraries/Resources/NGCards/TimeZones/Africa/Addis_Ababa.ics
@@ -750,64 +805,6 @@ lib/GNUstep/SOGo/PreferencesUI.SOGo/Resources/Ukrainian.lproj/Localizable.string
 lib/GNUstep/SOGo/PreferencesUI.SOGo/Resources/Welsh.lproj/Localizable.strings
 lib/GNUstep/SOGo/PreferencesUI.SOGo/Resources/product.plist
 lib/GNUstep/SOGo/PreferencesUI.SOGo/stamp.make
-lib/GNUstep/SOGo/SOGo.framework/Headers
-lib/GNUstep/SOGo/SOGo.framework/Resources
-lib/GNUstep/SOGo/SOGo.framework/SOGo
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/DOMNode+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/LDAPSource.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSArray+DAV.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSArray+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSCalendarDate+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSDictionary+DAV.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSDictionary+URL.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSDictionary+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSNull+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSNumber+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSObject+DAV.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSObject+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSString+DAV.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSString+Utilities.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/NSURL+DAV.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoAuthenticator.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoBuild.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoCASSession.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoCache.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoConstants.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoContentObject.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoDAVAuthenticator.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoDateFormatter.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoFolder.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoGCSFolder.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoGroup.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoMailer.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoObject.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoParentFolder.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoPermissions.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoProductLoader.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoProxyAuthenticator.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoSession.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoSieveManager.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoStartupLogger.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoUser.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoUserFolder.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoUserManager.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoUserProfile.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoWebAuthenticator.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoWebDAVAclManager.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SOGoWebDAVValue.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/SQLSource.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/WOContext+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/WORequest+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/WOResourceManager+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Headers/WOResponse+SOGo.h
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Resources/DAVReportMap.plist
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Resources/Info-gnustep.plist
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/Resources/SOGoDefaults.plist
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/SOGo
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/libSOGo.so
-lib/GNUstep/SOGo/SOGo.framework/Versions/2/libSOGo.so.2.0.0
-lib/GNUstep/SOGo/SOGo.framework/Versions/Current
-lib/GNUstep/SOGo/SOGo.framework/libSOGo.so
 lib/GNUstep/SOGo/SchedulerUI.SOGo/Resources/BrazilianPortuguese.lproj/Localizable.strings
 lib/GNUstep/SOGo/SchedulerUI.SOGo/Resources/Catalan.lproj/Localizable.strings
 lib/GNUstep/SOGo/SchedulerUI.SOGo/Resources/Czech.lproj/Localizable.strings
@@ -1350,7 +1347,6 @@ lib/GNUstep/SOGo/WebServerResources/icon-forwarded-replied.png
 lib/GNUstep/SOGo/WebServerResources/icon-forwarded.png
 lib/GNUstep/SOGo/WebServerResources/icon-new.png
 lib/GNUstep/SOGo/WebServerResources/icon-replied.png
-lib/GNUstep/SOGo/WebServerResources/icon_unread.gif
 lib/GNUstep/SOGo/WebServerResources/iefixes.css
 lib/GNUstep/SOGo/WebServerResources/important.png
 lib/GNUstep/SOGo/WebServerResources/input_bg.gif
@@ -1613,6 +1609,7 @@ lib/GNUstep/SOGo/WebServerResources/title_sortdown_12x12.png
 lib/GNUstep/SOGo/WebServerResources/title_sortup_12x12.png
 lib/GNUstep/SOGo/WebServerResources/toolbarbtn_a_bg.png
 lib/GNUstep/SOGo/WebServerResources/toolbarbtn_span_bg.png
+lib/GNUstep/SOGo/WebServerResources/unread.png
 lib/GNUstep/SOGo/WebServerResources/up-icon.png
 lib/GNUstep/SOGo/WebServerResources/week-view.png
 lib/GNUstep/SOGo/WebServerResources/write-message.png
@@ -1641,3 +1638,6 @@ sbin/sogo-ealarms-notify
 sbin/sogo-slapd-sockd
 sbin/sogo-tool
 sbin/sogod
+share/examples/SOGo/SOGo.conf
+share/examples/SOGo/sogo-conf.sh
+share/examples/rc.d/sogod
